product_docs/docs/pgpool/1.0/01_installing_and_configuring_the_pgpool-II.mdx
---
title: "Installing Pgpool-II"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/1.0/installing_and_configuring_the_pgpool-II.html"
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/latest/installing_and_configuring_the_pgpool-II.html"
---

<div id="installing_and_configuring_the_pgpool-II" class="registered_link"></div>

Pgpool-II runs as a service on Linux systems. It is not supported on Windows systems. The Pgpool version required by your EDB Postgres Advanced Server and PostgreSQL installation is version-specific, but the documented and supported functionality of each version is the same. The following table lists the Pgpool version and their corresponding EDB Postgres Advanced Server and PostgreSQL versions. The information in this guide applies to each version listed in the table below.

| **Pgpool Version** | **Postgres Version**                                    | **Supported Platforms**                                                                                                                                           |
|--------------------|---------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| Pgpool 4.2         | EDB Postgres Advanced Server and PostgreSQL 13          | RHEL 7 - x86_64, RHEL 8 - x86_64 <br/>RHEL 7 - ppc64le <br/>Debian 9x Stretch and 10x Buster <br/>Ubuntu 18.04 LTS Bionic Beaver and Ubuntu 20.04 LTS Focal Fossa |
| Pgpool 4.2         | EDB Postgres Advanced Server and PostgreSQL 12          | RHEL 7 - x86_64, and RHEL 8 - x86_64 <br/>RHEL 7 - ppc64le <br/>Debian 9x Stretch and 10x Buster <br/>Ubuntu 18.04 LTS Bionic Beaver <br/>SLES 12                 |
| Pgpool 4.2         | EDB Postgres Advanced Server and PostgreSQL 11          | RHEL 7 - x86_64 <br/>RHEL 7 - ppc64le <br/>Debian 9x Stretch <br/>Ubuntu 18.04 LTS Bionic Beaver <br/>SLES 12                                                     |
| Pgpool 4.2         | EDB Postgres Advanced Server and PostgreSQL 9.6 and 10  | RHEL 7 - x86_64 and RHEL 7 - ppc64le                                                                                                                              |
| Pgpool 4.1         | EDB Postgres Advanced Server 13                         | RHEL 7 - x86_64, RHEL 8 - x86_64 <br/>RHEL 7 - ppc64le <br/>Debian 9x Stretch and 10x Buster <br/>Ubuntu 18.04 LTS Bionic Beaver and Ubuntu 20.04 LTS Focal Fossa |
| Pgpool 4.1         | EDB Postgres Advanced Server 12                         | RHEL 7 - x86_64, and RHEL 8 - x86_64 <br/>RHEL 7 - ppc64le <br/>Debian 9x Stretch and 10x Buster <br/>Ubuntu 18.04 LTS Bionic Beaver <br/>SLES 12                 |
| Pgpool 4.1         | EDB Postgres Advanced Server 11                         | RHEL 7 - x86_64 <br/>RHEL 7 - ppc64le <br/>Debian 9x Stretch <br/>Ubuntu 18.04 LTS Bionic Beaver <br/>SLES 12                                                     |
| Pgpool 4.0         | EDB Postgres Advanced Server 12                         | RHEL 7 - x86_64, and RHEL 8 - x86_64 <br/>RHEL 7 - ppc64le <br/>Debian 9x Stretch and 10x Buster <br/>Ubuntu 18.04 LTS Bionic Beaver <br/>SLES 12                 |
| Pgpool 4.0         | EDB Postgres Advanced Server 11                         | RHEL 7 - x86_64 <br/>RHEL 7 - ppc64le <br/>Debian 9x Stretch <br/>Ubuntu 18.04 LTS Bionic Beaver <br/>SLES 12                                                     |
| Pgpool 3.7         | EDB Postgres Advanced Server 10 and 11                  | RHEL 7 - x86_64 and RHEL 7 - ppc64le                                                                                                                              |
| Pgpool 3.6         | EDB Postgres Advanced Server 9.6 and 10                 | RHEL 7 - x86_64 <br/>RHEL 7 - ppc64le <br/>Linux graphical installer                                                                                              |

!!! Note
    - Pgpool is no longer supported on CentOS/RHEL/OEL 6.x platforms. It is strongly recommended that EDB products running on these platforms be migrated to a supported platform.
    - Pgpool is certified with the Pgpool-II extensions shipped with EDB Postgres Advanced Server and PostgreSQL.

This guide assumes that the user has some knowledge of installation and system administration procedures, and has administrative privileges on the host.

Before installing the repository configuration, you must have credentials that allow access to the EDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

## Installing Pgpool-II on a CentOS Host

Perform the following steps to install Pgpool-II on a CentOS host:

1.  To install the repository configuration, assume superuser privileges and invoke one of the following platform-specific commands:

    On CentOS 7:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On CentOS 8:

    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` variable in the following command with the username and password of a registered EDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Before installing Pgpool-II, execute the following command to install the Extra Packages for Enterprise Linux (EPEL):

    On CentOS 7:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On CentOS 8:

    ```text
    dnf -y install epel-release
    ```

4.  For CentOS 8, enable the PowerTools repository to satisfy additional package dependencies:

    ```text
    dnf config-manager --set-enabled PowerTools
    ```

5.  For CentOS 8, disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```

6.  Use the platform-specific command to install Pgpool-II:

       On CentOS 7:

    ```text
    yum install edb-pgpool<xx>
    ```

       On CentOS 8:

    ```text
    dnf install edb-pgpool<xx>
    ```

       Where &lt;xx> is the Pgpool release version.

       For example, to install the latest Pgpool Version 4.2, execute the following command:

       On CentOS 7:

    ```text
    yum install edb-pgpool42
    ```

    On CentOS 8:

    ```text
    dnf install edb-pgpool42
    ```

    When you install an RPM package that is signed by a source that is not recognized by your system, your permission to import the key to your local server may be asked for. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

    Pgpool-II will be installed in the `/usr/edb/pgpool<x.y>/` directory, where &lt;x.y> is the installed Pgpool-II version number. The configuration files are created in the `/etc/sysconfig/edb/pgpool<x.y>` directory, where *&lt;x.y>* is the Pgpool release version. By default, `.sample` is appended to the configuration file name; remove the `.sample` from the configuration file after copying the file to create your custom configuration.

<div id="installing_on_RHEL" class="registered_link"></div>

## Installing Pgpool-II on a RHEL Host

Before creating the repository configuration file, you must have credentials that allow access to the EDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install Pgpool-II:

1.  To create the repository configuration file, assume superuser privileges and invoke one of the following platform-specific commands:

    On RHEL 7:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On RHEL 8:

    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` variable in the following command with the username and password of a registered EDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Before installing Pgpool, execute the following command to install the Extra Packages for Enterprise Linux (EPEL):

    On RHEL 7:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On RHEL 8:

    ```text
    dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
    ```

4.  Enable the repository:

    On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy additional package dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

    On RHEL 8, enable the `codeready-builder-for-rhel-8-*-rpms` repository to satisfy additional package dependencies:

    ```text
    ARCH=$( /bin/arch )

    subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
    ```

5.  For RHEL 8, disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```

6.  Use the platform-specific command to install Pgpool-II:

       On RHEL 7:

    ```text
    yum install edb-pgpool<xx>
    ```

       On RHEL 8:

    ```text
    dnf install edb-pgpool<xx>
    ```

       Where &lt;xx> is the Pgpool release version.

       For example, to install the latest Pgpool Version 4.2, execute the following command:

       On RHEL 7:

    ```text
    yum install edb-pgpool42
    ```

       On RHEL 8:

    ```text
    dnf install edb-pgpool42
    ```

    When you install an RPM package that is signed by a source that is not recognized by your system, your permission to import the key to your local server may be asked for. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

    Pgpool-II will be installed in the `/usr/edb/pgpool<x.y>/` directory, where &lt;x.y> is the installed Pgpool-II version number. The configuration files are created in the `/etc/sysconfig/edb/pgpool<x.y>` directory, where *&lt;x.y>* is the Pgpool release version. By default, `.sample` is appended to the configuration file name; remove the `.sample` from the configuration file after copying the file to create your custom configuration.

<div id="installing_on_ppcle" class="registered_link"></div>

## Installing Pgpool-II on a RHEL/CentOS 7 PPCLE Host

Before creating the repository configuration file, you must have credentials that allow access to the EDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install Pgpool-II on a RHEL/CentOS 7 PPC64LE Host:

1.  Install Advance Toolchain:

    ```text
    rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b

    cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF

    # Beginning of the configuration file
    [advance-toolchain]
    name=Advance Toolchain IBM FTP
    baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
    failovermethod=priority
    enabled=1
    gpgcheck=1
    gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
    # End of the configuration file
    ```

2.  To create the repository configuration file, assume superuser privileges and invoke the following command:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

3.  Replace the `USERNAME:PASSWORD` variable in the following command with the username and password of a registered EDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

4.  Before installing Pgpool-II, execute the following command to install the Extra Packages for Enterprise Linux (EPEL):

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

5.  On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy additional package dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

6.  Invoke the following command to install Pgpool-II:

    ```text
    yum -y install edb-pgpool<xx>
    ```

    Where &lt;xx> is the Pgpool-II version you want to install.

<div id="installing_a_deb_package_on_a_debian_or_ubuntu_host" class="registered_link"></div>

## Installing Pgpool-II on a Debian/Ubuntu Host

To install Pgpool-II on a Debian or Ubuntu host, you must have credentials that allow access to the EDB repository. To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/user).

The following steps walks you through using the EDB apt repository to install a Debian package. When using the commands, replace the `username` and `password` with the credentials provided by EDB.

1.  Assume superuser privileges:

    ```text
    sudo su –
    ```

2.  Configure access to the EDB repository on your system:

     On Debian 9, Ubuntu 18, and Ubuntu 20:

    ```text
    sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

     On Debian 10:

    a.  Set up the EDB repository:

    ```text
    sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    b.  Substitute your EDB credentials for the `username` and `password` placeholders in the following command:

    ```text
    sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    ```

3.  Add support to your system for secure APT repositories:

    ```text
    apt-get install apt-transport-https
    ```

4.  Add the EDB signing key:

    ```text
    wget -q -O - https://apt.enterprisedb.com/edb-deb.gpg.key  | sudo apt-key add -
    ```

5.  Update the repository metadata:

    ```text
    apt-get update
    ```

6.  Install the Debian package:

    ```text
    apt-get install -y edb-pgpool<xx>
    ```

Where &lt;xx> is the Pgpool release version.

After installing Pgpool-II on a Debian host, the configuration files are located in the `/etc/edb/edb-pgpool<x.y>` directory, where &lt;x.y> is the Pgpool release version. By default, `.sample` is appended to the configuration file name; `.sample` should be removed after copying the file to create your custom configuration.

<div id="using_the_SLES_host" class="registered_link"></div>

## Installing Pgpool-II on an SLES 12 Host

You can use the Zypper package manager to install Pgpool-II on an SLES 12 host. Zypper will attempt to satisfy package dependencies as it installs a package, but requires access to specific repositories that are not hosted at EDB.

1.  Assume superuser privileges.

    ```text
    sudo su -
    ```

2.  Use the following command to add the EDB repository to your SLES host:

    ```text
    zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo
    ```

3.  Invoke the following command to refresh the metadata:

    ```text
    zypper refresh
    ```

4.  Install `SUSEConnect` to register the host with SUSE to allow access to SUSE repositories:

    ```text
    zypper install SUSEConnect
    ```

5.  Register the host with SUSE to allow access to SUSE repositories and replace `'REGISTRATION_CODE'` and `'EMAIL'` with your SUSE registration information:

    ```text
    SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'
    SUSEConnect -p PackageHub/12.4/x86_64
    SUSEConnect -p sle-sdk/12.4/x86_64
    ```

6.  Install the following repository for PEM dependencies:

    ```text
    zypper addrepo https://download.opensuse.org/repositories/Apache:/Modules/SLE_12_SP4/Apache:Modules.repo
    ```

7.  Refresh the metadata:

    ```text
    zypper refresh
    ```

8.  Install OpenJDK (version 1.8) for Java based components:

    ```text
    zypper -n install java-1_8_0-openjdk
    ```

9.  Then, use the Zypper utility to install Pgpool-II:

    ```text
    zypper install -n edb-pgpool<xx>
    ```

    Where &lt;xx> is the Pgpool version you wish to install.

<div id="using_the_graphical_installer" class="registered_link"></div>

## Installing Pgpool-II Using the Linux Graphical Installer

Graphical installers for Pgpool-II are available via StackBuilder Plus (for EDB Postgres Advanced Server hosts) or Stack Builder (on PostgreSQL hosts). You can access StackBuilder Plus through your Linux start menu. It is not supported on Windows systems.

Perform the following steps to install Pgpool-II:

1.  Open StackBuilder Plus and select your EDB Postgres Advanced Server installation from the drop-down list on the `Welcome` window. Click `Next` to continue to the application selection page. Expand the `Add-ons, tools and utilities` node, and check the box next to the Pgpool-II version you want to install and download the Pgpool-II installer. Click `Next` to continue. Provide the credentials and click `Next`.
2.  The selected packages and the default download directory where the package will be installed are displayed; change the download directory location if required. Click `Next`.
3.  Once you have downloaded the installation files, a confirmation message is displayed. Click `Next` to start the Pgpool-II installation.
4.  Select an installation language and click `OK`.
5.  The Pgpool installer welcomes you to the setup wizard.

![The Pgpool-II Welcome window](images/pp1.png)

Fig. 1: The Pgpool-II Welcome window

6.  Use the `Installation Directory` field to specify the directory in which you wish to install the Pgpool-II software (the default installation directory is `/opt/edb`) Then, click `Next` to continue.

![The Pgpool-II Installation Details Window](images/pp2.png)

Fig. 2: The Pgpool-II Installation Details Window

7.  Use the `Operating System User` field to specify the name of the Linux operating system user that Pgpool-II will change to after startup. Then, click `Next` to continue.

![The Pgpool-II Operating User window](images/pgpool3.png)

Fig. 3: The Pgpool-II Operating User window

8.  The `Ready to Install` window notifies you when the installer has all of the information needed to install Pgpool-II on your system. Click `Next` to install Pgpool-II.

![The Ready to Install window](images/pgpool4.png)

Fig. 4: The Ready to Install window

9.  Progress bars inform you as the installation progresses.

![The installation progresses](images/pgpool5.png)

Fig. 5: The installation progresses

10. The installer notifies you when the setup wizard has completed the Pgpool-II installation. Click `Finish` to exit the installer.

![The installation is complete](images/pp20.png)

Fig. 6: The installation is complete
