product_docs/docs/pgpool/4.2/01_installing_and_configuring_the_pgpool-II.mdx
---
title: "Installing Pgpool-II"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/1.0/installing_and_configuring_the_pgpool-II.html"
---

<div id="installing_and_configuring_the_pgpool-II" class="registered_link"></div>

!!! Note
    Pgpool-II runs as a service on Linux systems. Pgpool-II is not supported on Windows.

This table lists the latest  Pgpool-II versions and their supported corresponding EDB Postgres Advanced Server (EPAS) versions.  Pgpool-II is supported on the same platforms as EDB Postgres Advanced Server. See [Product Compatibility](https://www.enterprisedb.com/platform-compatibility#epas) for details.

| Pgpool | EPAS 14 | EPAS 13 | EPAS 12 | EPAS 11 | EPAS 10 | EPAS 9.6 |
| ------ | ------- | ------- | ------- | ------- | ------- | -------- |
| 4.2    | N       | Y       | Y       | Y       | Y       | Y        | 
| 4.1    | N       | Y       | Y       | Y       | N       | N        |
| 4.0    | N       | N       | Y       | Y       | N       | N        |
| 3.7    | N       | N       | N       | Y       | Y       | N        |


The documented and supported functionality of each version of Pgpool-II is the same. The information in this documentation applies to all supported versions of Pgpool-II.

See the following topics to install  Pgpool-II on specific hosts.
    

This documentation assumes that the user has some knowledge of installation and system administration procedures and has administrative privileges on the host.

Before installing the repository configuration, you must have credentials that allow access to the EDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

## Installing Pgpool-II on a CentOS/Rocky Linux/AlmaLinux x86-64 Host

Perform the following steps:

1.  To install the repository configuration, assume superuser privileges, and invoke the platform-specific command:

    On CentOS 7:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On Rocky Linux 8 or AlmaLinux 8:

    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` variable in the following command with the username and password of a registered EDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Invoke the following command to install the Extra Packages for Enterprise Linux (EPEL):

    On CentOS 7:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On Rocky Linux 8 or AlmaLinux 8:

    ```text
    dnf -y install epel-release
    ```

4.  The following steps are applicable only for Rocky Linux 8 or AlmaLinux 8:

    a. Enable the PowerTools repository to satisfy additional package dependencies:

    ```text
    dnf config-manager --set-enabled PowerTools
    ```

    b. Disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```

5.  Invoke the platform-specific command to install Pgpool-II:

       On CentOS 7:

    ```text
    yum install edb-pgpool<xx>
    ```

       On Rocky Linux 8 or AlmaLinux 8:

    ```text
    dnf install edb-pgpool<xx>
    ```

       where &lt;xx> is the Pgpool release version.

       For example, to install the latest Pgpool Version 4.2, invoke the following command:

       On CentOS 7:

    ```text
    yum install edb-pgpool42
    ```

    On Rocky Linux 8 or AlmaLinux 8:

    ```text
    dnf install edb-pgpool42
    ```

    When you install an RPM package signed by a source that is not recognized by your system, your permission to import the key to your local server may be asked. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y` and press `Return` to continue.

    Pgpool-II is installed in the `/usr/edb/pgpool<x.y>/` directory, where &lt;x.y> is the installed Pgpool-II version number.
    
<div id="installing_on_RHEL" class="registered_link"></div>

## Installing Pgpool-II on an RHEL x86-64 Host

Before creating the repository configuration file, you must have credentials that allow access to the EDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install Pgpool-II:

1.  To create the repository configuration file, assume superuser privileges, and invoke the platform-specific command:

    On RHEL 7:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On RHEL 8:

    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` variable in the following command with the username and password of a registered EDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Invoke the following command to install the Extra Packages for Enterprise Linux (EPEL):

    On RHEL 7:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On RHEL 8:

    ```text
    dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
    ```

4.  Enable the repository:

    On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy additional package dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

    On RHEL 8, enable the `codeready-builder-for-rhel-8-*-rpms` repository to satisfy additional package dependencies:

    ```text
    ARCH=$( /bin/arch )

    subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
    ```

5.  For RHEL 8, disable the built-in PostgreSQL module:

    ```text
    dnf -qy module disable postgresql
    ```

6.  Invoke the platform-specific command to install Pgpool-II:

       On RHEL 7:

    ```text
    yum install edb-pgpool<xx>
    ```

       On RHEL 8:

    ```text
    dnf install edb-pgpool<xx>
    ```

       where &lt;xx> is the Pgpool release version.

       For example, to install the latest Pgpool Version 4.2, invoke the following command:

       On RHEL 7:

    ```text
    yum install edb-pgpool42
    ```

       On RHEL 8:

    ```text
    dnf install edb-pgpool42
    ```

    When you install an RPM package that is signed by a source that is not recognized by your system, your permission to import the key to your local server may be asked for. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

    Pgpool-II will be installed in the `/usr/edb/pgpool<x.y>/` directory, where &lt;x.y> is the installed Pgpool-II version number.
    
<div id="installing_on_ppcle" class="registered_link"></div>

## Installing Pgpool-II on an RHEL 7 ppc64le Host

Before creating the repository configuration file, you must have credentials that allow access to the EDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install Pgpool-II on an RHEL/CentOS 7 PPC64LE Host:

1.  Install Advance Toolchain:

    ```text
    rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b

    cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF

    # Beginning of the configuration file
    [advance-toolchain]
    name=Advance Toolchain IBM FTP
    baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
    failovermethod=priority
    enabled=1
    gpgcheck=1
    gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
    # End of the configuration file
    ```

2.  To create the repository configuration file, assume superuser privileges and invoke the following command:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

3.  Replace the `USERNAME:PASSWORD` variable in the following command with the username and password of a registered EDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

4.  Invoke the following command to install the Extra Packages for Enterprise Linux (EPEL):

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

5.  On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy additional package dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

6.  Invoke the following command to install Pgpool-II:

    ```text
    yum -y install edb-pgpool<xx>
    ```

    where &lt;xx> is the Pgpool-II version you want to install.

## Installing Pgpool-II on an RHEL 8 ppc64le Host

There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

To log in as a superuser:

```sh
sudo su -
```

#### Setting up the Repository

1. To register with EDB to receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

1. Set up the EDB repository:

   ```sh
   dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
   ```

   This creates the /etc/yum.repos.d/edb.repo configuration file.

1. Add your EDB credentials to the edb.repo file:  

   ```sh
   sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
   ```

   where `USERNAME:PASSWORD` is the username and password available from your
   [EDB account](https://www.enterprisedb.com/user).

1. Install the EPEL repository and refresh the cache:

   ```sh
   dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
   dnf makecache
   ```

1. Enable the codeready-builder-for-rhel-8-\*-rpms repository since EPEL packages may depend on packages from it:

   ```sh
   ARCH=$( /bin/arch )
   subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
   ```

1. Disable the built-in PostgreSQL module:
   ```sh
   dnf -qy module disable postgresql
   ```

#### Installing the Package

```sh
dnf -y install edb-pgpool<xx>
```

where &lt;xx> is the Pgpool-II version you want to install.

<div id="installing_a_deb_package_on_a_debian_or_ubuntu_host" class="registered_link"></div>

## Installing Pgpool-II on a x86-64 Debian/Ubuntu Host

To install Pgpool-II on a Debian or Ubuntu host, you must have credentials that allow access to the EDB repository. To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install a Debian package using the EDB apt repository.

1.  Assume superuser privileges:

    ```text
    sudo su –
    ```

2.  Configure access to the EDB repository on your system:

    On Debian 9, Ubuntu 18, and Ubuntu 20, replace the `username` and `password` with your EDB credentials:

    ```text
    sh -c 'echo "deb https://<username>:<password>@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    On Debian 10:

    a.  Set up the EDB repository:

    ```text
    sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    b.  Replace the `username` and `password` with your EDB credentials:

    ```text
    sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    ```

3.  Add support to your system for secure APT repositories:

    ```text
    apt-get install apt-transport-https
    ```

4.  Add the EDB signing key:

    ```text
    wget -q -O - https://apt.enterprisedb.com/edb-deb.gpg.key  | sudo apt-key add -
    ```

5.  Update the repository metadata:

    ```text
    apt-get update
    ```

6.  Install the Debian package:

    ```text
    apt-get install -y edb-pgpool<xx>
    ```

   where &lt;xx> is the Pgpool release version.

After installing Pgpool-II on a Debian host, the configuration files are located in the `/etc/edb/edb-pgpool<x.y>` directory, where &lt;x.y> is the Pgpool release version.

<div id="using_the_SLES_host" class="registered_link"></div>

## Installing Pgpool-II on a x86-64 SLES 12 Host

You can use the Zypper package manager to install Pgpool-II on a SLES 12 host. Zypper will attempt to satisfy package dependencies but requires access to specific repositories that EDB does not host.

1.  Assume superuser privileges.

    ```text
    sudo su -
    ```

2.  Invoke the following command to add the EDB repository to your SLES host:

    ```text
    zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo
    ```

3.  Invoke the following command to refresh the metadata:

    ```text
    zypper refresh
    ```

4.  Install `SUSEConnect` to register the host with SUSE to allow access to SUSE repositories:

    ```text
    zypper install SUSEConnect
    ```

5.  Register the host with SUSE to allow access to SUSE repositories and replace `'REGISTRATION_CODE'` and `'EMAIL'` with your SUSE registration information:

    ```text
    SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'
    SUSEConnect -p PackageHub/12.5/x86_64
    SUSEConnect -p sle-sdk/12.5/x86_64
    ```


6.  Refresh the metadata:

    ```text
    zypper refresh
    ```


7.  Use the Zypper utility to install Pgpool-II:

    ```text
    zypper install -n edb-pgpool<xx>
    ```

    where &lt;xx> is the Pgpool version you wish to install.

<div id="using_the_graphical_installer" class="registered_link"></div>

## Installing Pgpool-II Using the Linux Graphical Installer

Graphical installers for Pgpool-II are available via StackBuilder Plus (on EDB Postgres Advanced Server hosts) or Stack Builder (on PostgreSQL hosts).

!!! Note
    Pgpool does not support Windows systems.

Perform the following steps to install Pgpool-II by accessing StackBuilder Plus through your Linux start menu:

1.  Open StackBuilder Plus and select your EDB Postgres Advanced Server installation from the drop-down list. Click `Next` to continue to the application selection page.
2.  Expand the `Add-ons, tools and utilities` node, and check the box next to the Pgpool-II version you want to install and download the Pgpool-II installer.
3.  Click `Next` to continue. Provide the credentials and click `Next`.
4.  The selected packages and the default download directory are displayed. Click `Next`.
5.  Once you have downloaded the installation files, a confirmation message is displayed. Click `Next` to start the Pgpool-II installation.
6.  Select an installation language and click `OK`.
7.  The Pgpool installer welcomes you to the setup wizard.

![The Pgpool-II Welcome window](images/pp1.png)

Fig. 1: The Pgpool-II Welcome window

8.  Use the `Installation Directory` field to specify the directory where you would install the Pgpool-II software (the default installation directory is `/opt/edb`). Then, click `Next` to continue.

![The Pgpool-II Installation Details Window](images/pp2.png)

Fig. 2: The Pgpool-II Installation Details Window

9.  Use the `Operating System User` field to specify the Linux operating system user's name that Pgpool-II will change to after startup. Then, click `Next` to continue.

![The Pgpool-II Operating User window](images/pgpool3.png)

Fig. 3: The Pgpool-II Operating User window

10.  The `Ready to Install` window notifies you when the installer has all of the information needed to install Pgpool-II on your system. Click `Next` to install Pgpool-II.

![The Ready to Install window](images/pgpool4.png)

Fig. 4: The Ready to Install window

11.  Progress bars inform you as the installation progresses.

![The installation progresses](images/pgpool5.png)

Fig. 5: The installation progresses

12. The installer notifies you when the setup wizard has completed the Pgpool-II installation. Click `Finish` to exit the installer.

![The installation is complete](images/pp20.png)

Fig. 6: The installation is complete
